# bms-driver

./: .gitmodules  README.md  SPI_CAN_Converter.brd  SPI_CAN_Converter.sch  meson.build
CAM_Files/DrillFiles/: drill_1_16.xln
CAM_Files/GerberFiles/: copper_bottom.gbr  copper_top.gbr  gerber_job.gbrjob  profile.gbr  silkscreen_top.gbr  soldermask_bottom.gbr  soldermask_top.gbr
src/: blinkLED.c  blink_no_list.c  can_test.c  driver_functions.c  driver_functions.h  eps.c  eps.h  initConn.c  initConn.h  known_hosts.c  known_hosts.h  main.cpp  serial.c  template.c
